product ui update

--- a/Online Shop/IzmenaProizvoda.html
+++ b/Online Shop/IzmenaProizvoda.html
@@ -403,7 +403,7 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy</span>
                                                     </div>
-                                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Dodavanje novog proizvoda</h5>
+                                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Izmena podataka o proizvodu</h5>
                                                     <div id="divgreske" class="alert alert-danger d-flex align-items-center" role="alert">
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                                             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -448,11 +448,11 @@
                                                         <br />
                                                         <img id="pregled" alt="pregled" src="/Images/productplc.jpg" width="80" height="80" class="img-fluid" />
                                                     </div>
-                                                    <p class="my-3 pb-lg-2 fw-bold text-dark">
-                                                        Dodavanjem novog proizvoda, saglasni ste da on postane javno vidljiv na platformi Shopy.
+                                                    <p class="my-3 pb-lg-2 fw-bold text-danger">
+                                                        Nakon promene podataka o proizvodu, biće potrebno par trenutaka da bi promene bile vidljive na platformi Shopy.
                                                     </p>
                                                     <div class="pt-1 mb-4">
-                                                        <button class="btn btn-dark btn-lg btn-block" id="dodajbtn" type="button">Dodavanje proizvoda</button>
+                                                        <button class="btn btn-dark btn-lg btn-block" id="dodajbtn" type="button">Sačuvaj izmene</button>
                                                     </div>
                                                 </form>
                                             </div>
