--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -155,6 +155,79 @@
                     }
                 });
             });
+
+            // dugme pretraga
+            $("#pretragabtn").on('click', function () {
+                // isprazni redove
+                $('#proizvodi').empty();
+                $("#divgreske").addClass('d-none');
+               
+                var sortiranje = $("#sort").val().toString();
+
+                // poziv ka apiju za prikaz po filteru
+                $.ajax({
+                    url: "/api/products/ListaFiltriranihProizvodaPocetna",
+                    type: "POST",
+                    data: JSON.stringify({
+                        Naziv: naziv,
+                        Grad: grad,
+                        MinCena: minCena,
+                        MaxCena: maxCena,
+                        Sortiranje: sortiranje
+                    }),
+                    async: false,
+                    cache: false,
+                    dataType: "json",
+                    contentType: "application/json; charset=utf-8",
+                    success: function (response) {
+                        var data = JSON.parse(response);
+
+                        if (data.length > 0) {
+                            $(function () {
+                                // popuni tabelu
+                                $.each(data, function (key, k) {
+                                    // dodavanje reda po red
+                                    var kupac_dodaj_naruci = '<a href="Proizvod.html?id=' + k.Id + '" class="btn btn-dark">Pogledajte proizvod</a>';
+
+                                    $("#proizvodi").append(
+                                        '<div class="card mb-4 border-success">' +
+                                        '<div class="card-body">' +
+                                        '<div class="row justify-content-between">' +
+                                        '<div class="col-2">' +
+                                        '<img alt="proizvod" class="card-img-top" width="150" height="150" src="/Uploads/' + k.Slika + '" />' +
+                                        '</div>' +
+                                        '<div class="col-10">' +
+                                        '<div class="d-flex justify-content-between">' +
+                                        '<span class="h5 card-title justify-content-start">' + k.Naziv + '</span>' +
+                                        '<span class="h5 card-title text-success fw-semibold justify-content-end">' + k.Grad + '</span>' +
+                                        '</div>' +
+                                        '<h6 class="card-subtitle mb-2 text-muted">' + k.Cena + ' RSD</h6>' +
+                                        '<p class="card-text">' + k.Opis + '</p>' +
+                                        kupac_dodaj_naruci +
+                                        '</div>' +
+                                        '</div>' +
+                                        '</div>' +
+                                        '</div>');
+                                });
+                            });
+
+                            var kriterijum = $("#sort").find(":selected").text().toLowerCase();
+                            // desila se greska - prikazi je
+                            $("#divgreske").removeClass('d-none');
+                            $("#greske").text("Prikazani su svi " + ($("#dostupni").is(":checked") ? "dostupni" : "") + " proizvodi sortirani koristeći kriterijum " + kriterijum + ".");
+                            return false;
+                        }
+                        else {
+                            // desila se greska - prikazi je
+                            $("#divgreske").removeClass('d-none');
+                            $("#greske").text("Nema proizvoda koji ispunjavaju uneti kriterijum!");
+                            return false;
+                        }
+                    }
+                });
+
+                return false; // prevent ajax page reload
+            });
         });
     </script>
 </head>
